; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/persistent-data/extr_dm-block-manager.c_dm_bm_unlock.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/persistent-data/extr_dm-block-manager.c_dm_bm_unlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_block = type { i32 }
%struct.buffer_aux = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dm_bm_unlock(%struct.dm_block* %0) #0 {
  %2 = alloca %struct.dm_block*, align 8
  %3 = alloca %struct.buffer_aux*, align 8
  store %struct.dm_block* %0, %struct.dm_block** %2, align 8
  %4 = load %struct.dm_block*, %struct.dm_block** %2, align 8
  %5 = call i32 @to_buffer(%struct.dm_block* %4)
  %6 = call %struct.buffer_aux* @dm_bufio_get_aux_data(i32 %5)
  store %struct.buffer_aux* %6, %struct.buffer_aux** %3, align 8
  %7 = load %struct.buffer_aux*, %struct.buffer_aux** %3, align 8
  %8 = getelementptr inbounds %struct.buffer_aux, %struct.buffer_aux* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %18

11:                                               ; preds = %1
  %12 = load %struct.dm_block*, %struct.dm_block** %2, align 8
  %13 = call i32 @to_buffer(%struct.dm_block* %12)
  %14 = call i32 @dm_bufio_mark_buffer_dirty(i32 %13)
  %15 = load %struct.buffer_aux*, %struct.buffer_aux** %3, align 8
  %16 = getelementptr inbounds %struct.buffer_aux, %struct.buffer_aux* %15, i32 0, i32 0
  %17 = call i32 @bl_up_write(i32* %16)
  br label %22

18:                                               ; preds = %1
  %19 = load %struct.buffer_aux*, %struct.buffer_aux** %3, align 8
  %20 = getelementptr inbounds %struct.buffer_aux, %struct.buffer_aux* %19, i32 0, i32 0
  %21 = call i32 @bl_up_read(i32* %20)
  br label %22

22:                                               ; preds = %18, %11
  %23 = load %struct.dm_block*, %struct.dm_block** %2, align 8
  %24 = call i32 @to_buffer(%struct.dm_block* %23)
  %25 = call i32 @dm_bufio_release(i32 %24)
  ret void
}

declare dso_local %struct.buffer_aux* @dm_bufio_get_aux_data(i32) #1

declare dso_local i32 @to_buffer(%struct.dm_block*) #1

declare dso_local i32 @dm_bufio_mark_buffer_dirty(i32) #1

declare dso_local i32 @bl_up_write(i32*) #1

declare dso_local i32 @bl_up_read(i32*) #1

declare dso_local i32 @dm_bufio_release(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
